# SkySatPrep

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/radprep_skysat/: __init__.py  cli.py
src/skysatprep/: cli.py  core.py
tests/: test_core.py
